[gd_scene load_steps=2 format=3 uid="uid://dqtwqr5jaitj8"]

[ext_resource type="Script" path="res://scripts/ui/stats_screen.gd" id="1"]

[node name="StatsScreen" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="Panel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.95)

[node name="Header" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 40.0
offset_right = 150.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Match Statistics"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="DamageDealt" type="HBoxContainer" parent="Panel/StatsContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/StatsContainer/DamageDealt"]
layout_mode = 2
size_flags_horizontal = 3
text = "Damage Dealt"

[node name="Value" type="Label" parent="Panel/StatsContainer/DamageDealt"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="LargestMatch" type="HBoxContainer" parent="Panel/StatsContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/StatsContainer/LargestMatch"]
layout_mode = 2
size_flags_horizontal = 3
text = "Largest Match"

[node name="Value" type="Label" parent="Panel/StatsContainer/LargestMatch"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="TilesBroken" type="HBoxContainer" parent="Panel/StatsContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/StatsContainer/TilesBroken"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tiles Broken"

[node name="Value" type="Label" parent="Panel/StatsContainer/TilesBroken"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="HealingDone" type="HBoxContainer" parent="Panel/StatsContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/StatsContainer/HealingDone"]
layout_mode = 2
size_flags_horizontal = 3
text = "Healing Done"

[node name="Value" type="Label" parent="Panel/StatsContainer/HealingDone"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="DamageBlocked" type="HBoxContainer" parent="Panel/StatsContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/StatsContainer/DamageBlocked"]
layout_mode = 2
size_flags_horizontal = 3
text = "Damage Blocked"

[node name="Value" type="Label" parent="Panel/StatsContainer/DamageBlocked"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="MatchDuration" type="HBoxContainer" parent="Panel/StatsContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/StatsContainer/MatchDuration"]
layout_mode = 2
size_flags_horizontal = 3
text = "Match Duration"

[node name="Value" type="Label" parent="Panel/StatsContainer/MatchDuration"]
layout_mode = 2
text = "0:00"
horizontal_alignment = 2

[node name="StunInflicted" type="HBoxContainer" parent="Panel/StatsContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/StatsContainer/StunInflicted"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stun Inflicted"

[node name="Value" type="Label" parent="Panel/StatsContainer/StunInflicted"]
layout_mode = 2
text = "0.0s"
horizontal_alignment = 2

[node name="LongestChain" type="HBoxContainer" parent="Panel/StatsContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/StatsContainer/LongestChain"]
layout_mode = 2
size_flags_horizontal = 3
text = "Longest Chain"

[node name="Value" type="Label" parent="Panel/StatsContainer/LongestChain"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 40

[node name="NewGameButton" type="Button" parent="Panel/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "New Game"

[node name="RematchButton" type="Button" parent="Panel/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Rematch"
